# OmniDoc

./: .dockerignore  .env.development  .env.example  .env.production  .gitignore  AZURE_CONTAINER_DEPLOYMENT.md  AZURE_DEPLOYMENT.md  BACKEND.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DOCS_INDEX.md  DOCUMENT_DEPENDENCIES.md  Dockerfile  Dockerfile.celery  FRONTEND.md  GEMINI_2_5_PRO_TEST_REPORT.md  IMPROVEMENTS.md  IMPROVEMENT_ROADMAP.md  LOCAL_MODEL_OPTIMIZATION.md  MAINTENANCE.md  ORACLE_CLOUD_DEPLOYMENT.md  PRODUCTION_SETUP.md  QUALITY_IMPROVEMENT_ANALYSIS.md  QUALITY_IMPROVEMENT_FIX_SUMMARY.md  QUALITY_IMPROVEMENT_PLAN.md  QUALITY_IMPROVEMENT_SOLUTION.md  RAILWAY_DOMAIN_QUICK_SETUP.md  README.md  README_PRODUCTION.md  SECURITY.md  TEST_PROMPT.md  UPSTASH_SETUP.md  WORKFLOW_DOCUMENTATION.md  docker-compose.yml  env.production.template  pyproject.toml  requirements.txt  setup.sh  start_server.sh  tailwind.config.js  (+1 more)
.github/workflows/: azure-container-deploy.yml
backend/: pytest.ini  requirements.txt  run_tests.sh  uvicorn_dev.py
backend/config/: document_definitions.json
backend/prompts/: __init__.py  system_prompts.py
backend/scripts/: check_celery_queue.py  init_database.sh  setup.sh  start_celery_worker.sh
backend/src/agents/: __init__.py  base_agent.py  code_analyst_agent.py  document_improver_agent.py  feature_roadmap_agent.py  format_converter_agent.py  generic_document_agent.py  marketing_plan_agent.py  quality_reviewer_agent.py  requirements_analyst.py  risk_management_agent.py  special_agent_adapter.py  special_agent_registry.py
backend/src/auth/: __init__.py  jwt_auth.py  oauth2.py
backend/src/config/: __init__.py  document_catalog.py  quality_rules.json  settings.py
backend/src/context/: __init__.py  context_manager.py  shared_context.py
backend/src/coordination/: __init__.py  coordinator.py  metrics.py
backend/tests/: README.md  __init__.py  conftest.py  test_api.py  test_backward_compatibility.py  test_health.py  test_monitoring.py  test_utils.py  test_websocket.py
config/: document_definitions.json
docs/: LOGGING.md  NEON_SETUP.md  README.md
docs/formats/: pm_documentation.docx  requirements_analyst.html  test_documentation.html
examples/: multi_provider_example.py
frontend/: .env.development  .env.example  .env.production  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: DocumentSelector.tsx  DocumentViewer.tsx  EmptyState.tsx  Footer.tsx  Header.tsx  PlaceholdersAndVanishInput.tsx  ProgressTimeline.tsx
frontend/lib/: documentRanking.ts  i18n.ts  useProjectStatus.ts
prompts/: __init__.py  system_prompts.py
scripts/: deploy_oracle_cloud.sh  setup.sh  start_celery_worker.sh  test_api_endpoints.py  test_frontend_api.sh
src/: __init__.py
src/agents/: api_documentation_agent.py  base_agent.py  business_model_agent.py  code_analyst_agent.py  developer_documentation_agent.py  document_improver_agent.py  format_converter_agent.py  generic_document_agent.py  legal_compliance_agent.py  marketing_plan_agent.py  pm_documentation_agent.py  quality_reviewer_agent.py  requirements_analyst.py  requirements_analyst_v2.py  special_agent_adapter.py  stakeholder_communication_agent.py  support_playbook_agent.py  technical_documentation_agent.py  test_documentation_agent.py  user_documentation_agent.py
src/context/: context_manager.py  shared_context.py
src/coordination/: coordinator.py  workflow_dag.py
src/llm/: __init__.py  base_provider.py  gemini_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
src/quality/: __init__.py  basic_checks.py  quality_checker.py
src/rate_limit/: __init__.py  async_queue_manager.py  daily_limit_manager.py  queue_manager.py
src/tasks/: __init__.py  celery_app.py  generation_tasks.py
src/utils/: __init__.py  document_summarizer.py  error_handler.py  file_manager.py  redis_client.py
src/web/: app.py  websocket_manager.py
tests/unit/: test_api_agent.py  test_developer_agent.py  test_error_handler.py  test_format_converter_agent.py  test_parallel_executor.py  test_rate_limiter.py  test_stakeholder_agent.py  test_technical_agent.py  test_test_agent.py  test_web_app.py
(+68 files in other folders)
