[project]
name = "docu-gen"
version = "0.1.0"
description = "AI-powered documentation generation system using Google Gemini API and AutoGen"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "DOCU-GEN Team"}
]
license = {text = "MIT"}

dependencies = [
    "google-generativeai>=0.3.0",
    "ratelimit>=2.2.1",
    "diskcache>=5.6.3",
    "textstat>=0.7.3",
    "python-dotenv>=1.0.0",
    "markdown>=3.5.0",
    "weasyprint>=60.0",
    "python-docx>=1.1.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "gunicorn>=21.2.0",  # Production WSGI server
    "jinja2>=3.1.2",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "aiohttp>=3.9.0", # For async HTTP requests (Ollama, etc.)
    "httpx>=0.25.0", # Alternative async HTTP client
    "websockets>=12.0", # For WebSocket support in uvicorn
    "psycopg2-binary>=2.9.0", # PostgreSQL adapter
    "celery>=5.3.0", # Task queue
    "redis>=5.0.0", # Redis for Celery broker and caching
    "passlib[bcrypt]>=1.7.4", # Password hashing
    "python-jose[cryptography]>=3.3.0", # JWT tokens
    "slowapi>=0.1.9", # Rate limiting for FastAPI
]

[project.optional-dependencies]
full = [
    "pyautogen>=0.2.0",
    "langchain>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
anthropic = [
    "anthropic>=0.18.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",  # For TestClient
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
include = ["src/**/*.py"]
exclude = ["**/__pycache__", "**/*.pyc"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.ruff]
line-length = 100
target-version = "py38"

